# android-odiff

./: .gitignore  License  README.md  devshell.nix  flake.nix  settings.gradle.kts
.github/workflows/: release.yml
android-diff/: CMakeLists.txt  build.gradle.kts
android-diff/c_src/: odiff_bindings.cpp  odiff_bindings.h
android-diff/src/androidTest/java/com/jossephus/android_diff/: ExampleInstrumentedTest.kt
android-diff/src/main/java/com/jossephus/android_diff/: ODiffLib.kt
android-diff/src/main/jniLibs/arm64-v8a/include/: tif_config.h
android-diff/src/main/jniLibs/armeabi-v7a/include/: spng.h  tif_config.h  tiffconf.h  tiffvers.h
android-diff/src/main/jniLibs/x86/include/: jconfig.h
android-diff/src/main/jniLibs/x86_64/include/: tiffconf.h
app/: CMakeLists.txt  build.gradle.kts  key  odiff_bindings.cpp
app/c_src/: add.cpp
app/src/androidTest/java/com/jossephus/sample_android_odiff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jossephus/sample_android_odiff/: DiffScreen.kt  MainActivity.kt  NativeLib.kt
app/src/main/java/com/jossephus/sample_android_odiff/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/jossephus/sample_android_odiff/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
odiff/: build.zig  build.zig.zon
odiff-lib/: build.zig  build.zig.zon  ndk.zig
odiff-lib/src/: c_odiff_api.zig  root.zig  test-odiff.c
odiff/src/: c_api.zig  main.zig  root.zig
(+1 files in other folders)
